<resources>
    <string name="app_name">MusicTheoryApp</string>
    <string name="exercise_nav_title">Exercise</string>
    <string name="reference_nav_title">Review</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_button_text">ENTER</string>
    <string name="exercise_previous_text">PREVIOUS</string>
    <string name="exercise_next_text">NEXT</string>
    <string name="exercise_finish_text">FINISH</string>
    <string name="result_detail_return_text">RETURN TO OVERVIEW</string>
    <string name="correct_answer_header_text">CORRECT ANSWER</string>
    <string name="empty_answer">NO ANSWER PROVIDED</string>
    <string name="time_remaining">Time: %1$s</string>
    <string name="times_up_text">Time\'s up!</string>
    <string name="exercise_menu_start_button_default_text">START</string>
    <string name="return_to_overview_text">RETURN TO OVERVIEW</string>
    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="interval_input_tip">Swipe up and down to change note position.\nTap to change accidental.</string>
    <string name="server_error_status">Error contacting server. Try again.</string>
    <string name="xml_error_status">Errors processing exercise (XML).</string>
    <string name="json_error_status">Error processing exercise (JSON).</string>
    <string name="image_download_status">Downloading images...(%1$d/%2$d)</string>
    <string name="volley_error_status">Error processing exercise (Volley).</string>
    <string name="text_input_hint">Your answer</string>
    <string name="question_string">Q %1$s</string>
    <string name="question_correct_answer_title_text_view_string">Correct answer:</string>
    <string name="image_download_error">Error downloading image</string>
    <string name="image_save_error">Error saving image</string>
    <string name="auth0_domain">donaldmntam.us.auth0.com</string>
    <string name="auth0_client_id">aDwvx74aeFzIZ67IXxK8ewZQd5drIjhq</string>
    <string name="click_to_download_exercise_status">Click start to download exercise</string>
    <string name="sign_up_dialog_nickname_text_field_hint">Nickname</string>
    <string name="paused">PAUSED</string>
    <string name="question_correct_string">Correct!</string>
    <string name="question_correct_also_correct_string">Correct!\nAlso correct:</string>
    <string name="back">Back</string>
    <string name="menu_screen_title">Menu</string>
    <string name="sign_out_button_text">SIGN OUT</string>
    <string name="delete_account_button_text">DELETE ACCOUNT</string>
    <string name="out_of_time_dialog_title">Time is up!</string>
    <string name="out_of_time_dialog_description">The exercise will be ended. You can review the exercise in the \"History\" screen from the main menu.</string>
    <string name="no_thanks_dialog_confirmation">No thanks</string>
    <string name="ok_dialog_confirmation">OK</string>
    <string name="sign_up_dialog_title">Signing up via %1$s</string>
    <string name="sign_up_dialog_nick_name_title">How shall I call you?</string>
    <string name="sign_up">Sign up</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="pause_exercise_dialog_title">Do you want to pause the exercise?</string>
    <string name="pause_exercise_dialog_message">You may resume doing this exercise in the \"History\" screen from the main menu.</string>
    <string name="pause_exercise_dialog_confirm">Confirm</string>
    <string name="pause_exercise_back_to_exercise">Back to exercise</string>
    <string name="exit_exercise_dialog_title">You are about to exit the exercise</string>
    <string name="exit_exercise_dialog_message">Save the exercise to resume later from the \"History\" screen or end the exercise to check the answers.</string>
    <string name="exit_exercise_dialog_end">END</string>
    <string name="exit_exercise_dialog_save">SAVE</string>
    <string name="exit_exercise_dialog_back_to_exercise">STAY</string>
    <string name="toast_successful_sign_in">Sign-in successful! Welcome, %1$s.</string>
    <string name="toast_unsuccessful_sign_up">Error signing up unsuccessful!</string>
    <string name="toast_google_sign_in_exception">There were problems while signing in to Google!</string>
    <string name="toast_no_account_found">Create a user profile first.</string>
    <string name="toast_successful_sign_up">Sign-up successful! Welcome, %1$s.</string>
    <string name="toast_sign_out_successful">You have successfully signed out.</string>
    <string name="toast_sign_out_failed">Sign out unsuccessful, please try again.</string>
    <string name="toast_disconnect_successful">You have successfully disconnected your Google account from the app.</string>
    <string name="toast_disconnect_unsuccessful_google">There were problems while disconnecting your Google account.</string>
    <string name="toast_disconnect_unsuccessful_amta">There were problems while deleting the record of your account from the server.</string>
    <string name="toast_zero_question_groups">You do not have at least one question group selected.</string>
    <string name="toast_exit_confirmation">Back again to exit the app.</string>
    <string name="toast_successful_exercise_deletion">Exercise successfully deleted.</string>
    <string name="toast_failed_exercise_deletion">Error deleting exercise.</string>
    <string name="toast_failed_exercise_retrieval">Error retrieving exercise.</string>
    <string name="toast_json_parsing_error">There was an error parsing a json file.</string>
    <string name="toast_access_token_error">Error while trying to obtain an access token to the server.</string>
    <string name="toast_exercise_list_paused_info">The exercise has not ended; click the arrow to continue the exercise.</string>
    <string name="toast_failed_exercise_save">There was an error saving the exercise. Please try again!</string>
    <string name="toast_id_token_error">An error occurred when processing your user data. Please try again.</string>
    <string name="toast_server_no_response">There was no response from our server. Please try again later.</string>
    <string name="button_begin_test">BEGIN TEST</string>
    <string name="button_practice_mode">PRACTICE MODE</string>
    <string name="button_profile">PROFILE</string>
    <string name="button_history">HISTORY</string>
    <string name="main_activity_title">Main</string>
    <string name="profile_activity_title">Profile</string>
    <string name="practice_options_activity_title">Practice Options</string>
    <string name="exercise_activity_title">Exercise</string>
    <string name="exercise_history_activity_title">History</string>
    <string name="exercise_overview_activity_title">Overview</string>
    <string name="question_reading_activity_title">Exercise Review</string>
    <string name="group_time_signature">Time Signatures</string>
    <string name="group_simple_compound">Simple and Compound Time</string>
    <string name="group_rhythm">Rhythm Calculation</string>
    <string name="group_note_grouping">Note Grouping</string>
    <string name="group_rests">Rest Grouping</string>
    <string name="group_note_naming">Pitch Naming</string>
    <string name="group_enharmonic_equivalent">Enharmonic Equivalents</string>
    <string name="group_transposition">Transposition</string>
    <string name="group_clef_comparison">Clef Comparison</string>
    <string name="group_key_signature">Key Signatures</string>
    <string name="group_melody_key">Keys of Melodies</string>
    <string name="group_scale_note">Missing Notes in Scales</string>
    <string name="group_scale_clef">Clefs and Scales Matching</string>
    <string name="group_chromatic_scale">Chromatic Scales</string>
    <string name="group_technical_name">Technical Names of Notes</string>
    <string name="group_interval_naming">Interval Naming</string>
    <string name="group_interval_quality">Interval Quality</string>
    <string name="group_interval_drawing">Interval Drawing</string>
    <string name="group_cadence_chord">Chord Numbers in Cadences</string>
    <string name="group_cadence_naming">Cadence Naming</string>
    <string name="group_chord_naming">Chord Numbers and Inversions</string>
    <string name="group_musical_term">Musical Terms</string>
    <string name="group_ornament_naming">Ornament Naming</string>
    <string name="group_instrument_fact">Instrument Facts</string>
    <string name="group_octave_comparison">Clef Rewriting</string>
    <string name="group_score_fact">Score Facts</string>
    <string name="group_instrument_pitch">Instrument Pitch Comparison</string>
    <string name="group_note_counting">Technical Name Counting</string>
    <string name="group_score_number">Numeric Statements about Score</string>
    <string name="practice_options_confirm">CONFIRM</string>
    <string name="section_rhythm">Rhythm</string>
    <string name="section_pitch">Pitch</string>
    <string name="section_keys_and_scales">Keys and Scales</string>
    <string name="section_intervals">Intervals</string>
    <string name="section_chords">Chords</string>
    <string name="section_terms_signs_and_instruments">Terms, Signs, and Instruments</string>
    <string name="section_music_in_context">Music in Context</string>
    <string name="exercise_type_test">Test</string>
    <string name="exercise_type_practice">Practice</string>
    <string name="exercise_list_paused_text">PAUSED</string>
    <string name="exercise_list_menu_type">Type</string>
    <string name="exercise_list_menu_date">Date</string>
    <string name="exercise_list_menu_ended">Ended</string>
    <string name="exercise_list_menu_points">Points</string>
    <string name="exercise_list_sort_by">Sort by:</string>
    <string name="exercise_overview_section_name">Section %1$d</string>
    <string name="web_client_id" translatable="false">453228511123-2i0jeo2td5t2cuqbi53edmd9q8nfvns1.apps.googleusercontent.com</string>
    <string name="facebook_application_id">1081973559200969</string>
    <string name="fb_login_protocol_scheme">fb1081973559200969</string>
    <string name="facebook_client_token">c0cbf025229efb383ad7b3ba8a0b3bae</string>
    <string name="mock_purchase_button_text">Mock Purchase</string>
    <string name="and_or_string_builder_or">or</string>
    <string name="and_or_string_builder_and">and</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue_status">Sign in to continue to the app</string>
    <string name="contacting_server_status">Contacting server…</string>
    <string name="retrying_contact_status">Retrying contact with server…</string>
    <string name="retried_too_many_times_status">Server is unresponsive. Please try again later.</string>
    <string name="creating_new_profile_status">Create a user profile to continue</string>
    <string name="signed_in_status">Signed in successfully!</string>
    <string name="toast_bad_response_from_server">Bad response from the server. Please try again later.</string>
    <string name="sign_up_create_a_profile">Create a user profile</string>
    <string name="starting_exercise_status">Starting exercise…</string>
    <string name="toast_unable_to_get_exercise">Unable to get exercise from server. Please try again.</string>
    <string name="toast_bad_json_from_server">Unexpected response from the server. Please try again.</string>
    <string name="delete_account_dialog_description">You are about to disconnect your %1$s account from our server.</string>
    <string name="redo_exercise_message">Would you like to copy and redo the exercise?</string>
    <string name="redo_exercise_hint">Redo exercise</string>
    <string name="redo_history_bar_attempt_n">Attempt %1$d</string>
    <string name="exercise_list_no_exercise">You have not done any exercises yet</string>
    <string name="question_image_download_text">Loading images for this page...</string>
</resources>