<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exercise_menu_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:enabled="true"
        android:text="@string/exercise_menu_start_button_default_text"/>

    <TextView
        android:id="@+id/exercise_menu_status_text_view"
        android:text="@string/click_to_download_exercise_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/exercise_menu_start_button"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/exercise_menu_sign_out_button"
        android:text="@string/sign_out_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/exercise_menu_disconnect_account_button"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FF0000"/>

    <Button
        android:id="@+id/exercise_menu_disconnect_account_button"
        android:text="@string/delete_account_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#FF0000"/>

</RelativeLayout>