<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/exit_exercise_dialog_title"
        style="@style/dialog_title_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/exit_exercise_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exit_exercise_dialog_message"
        style="@style/dialog_title_message_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit_exercise_dialog_message"
        app:layout_constraintTop_toBottomOf="@+id/exit_exercise_dialog_title" />

    <TextView
        android:id="@+id/exit_exercise_dialog_end"
        style="@style/dialog_title_message_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit_exercise_dialog_end"
        app:layout_constraintEnd_toStartOf="@+id/exit_exercise_dialog_save"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exit_exercise_dialog_message" />

    <TextView
        android:id="@+id/exit_exercise_dialog_save"
        style="@style/dialog_title_message_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_exercise_dialog_save"
        app:layout_constraintEnd_toStartOf="@+id/exit_exercise_dialog_back_to_exercise"
        app:layout_constraintStart_toEndOf="@+id/exit_exercise_dialog_end"
        app:layout_constraintTop_toTopOf="@+id/exit_exercise_dialog_end" />

    <TextView
        android:id="@+id/exit_exercise_dialog_back_to_exercise"
        style="@style/dialog_title_message_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_exercise_dialog_back_to_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exit_exercise_dialog_save"
        app:layout_constraintTop_toTopOf="@+id/exit_exercise_dialog_end" />

</androidx.constraintlayout.widget.ConstraintLayout>