<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="question_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/question_top_info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/question_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Section #.#"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/question_timer_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/question_timer_display"
            android:text="@string/time_remaining"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/question_timer_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="##:##"
            android:textSize="20sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/question_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/question_answer_panel"
        app:layout_constraintTop_toBottomOf="@+id/question_top_info_bar">

        <TextView
            android:id="@+id/question_number"
            android:layout_width="30sp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:text="#.#"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/question_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/question_answer_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/question_first_button_layer"
        app:cardUseCompatPadding="true"
        app:cardElevation="16dp"
        app:cardCornerRadius="10dp" >

        <GridLayout
            android:id="@+id/question_answer_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/question_first_button_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/question_second_button_layer">

        <Button
            android:id="@+id/question_previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_previous_text" />

        <TextView
            android:id="@+id/question_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="#/#" />

        <Button
            android:id="@+id/question_next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_next_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/question_second_button_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/question_finish_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:text="@string/exercise_finish_text" />

        <Button
            android:id="@+id/question_debug_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test yo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>