<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_margin="16dp"
            android:useDefaultMargins="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/main_begin_test_button"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/menu_button_corner_radius"
                app:cardElevation="@dimen/menu_button_elevation"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_begin_test"
                    android:textSize="32sp"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_begin_practice_button"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/menu_button_corner_radius"
                app:cardElevation="@dimen/menu_button_elevation"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_practice_mode"
                    android:textSize="32sp"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_exercise_list_button"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/menu_button_corner_radius"
                app:cardElevation="@dimen/menu_button_elevation"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_row="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_past_exercise"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_profile_button"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/menu_button_corner_radius"
                app:cardElevation="@dimen/menu_button_elevation"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_row="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_profile"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

    <!-- TODO: REMOVE IF NOT USED -->

    <FrameLayout
        android:id="@+id/main_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>